2023-09-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-time-string): Test if
	format-time-string can accept three arguments.

	* ebuild-mode.el (sh-must-be-shell-mode): Test if the function is
	defined at compile time. This should only be the case for Emacs
	versions where defadvice is unobsolete.

	* glep-mode.el (rst-classify-adornment)
	(glep-mode-ignore-preamble): Use :before-while instead of :around
	as advice combinator.

2023-09-12  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.67 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-09-04  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-tag-line): Make it work when
	comment-start is nil or empty.

2023-09-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Add S and BDEPEND.
	Bug 729280.

2023-08-29  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.66 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-08-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode): Set paragraph-separate for
	eclasses, in order to prevent rewrapping of paragraphs into a
	preceding eclass documentation token.

2023-08-24  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el:
	* ebuild-mode-keywords.el:
	* gentoo-newsitem-mode.el:
	* glep-mode.el:
	* devbook-mode.el: Enable lexical binding.
	* ebuild-mode.el (ebuild-run-command, ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): Add underscore to name of unused
	function argument.

	* ebuild-mode.el (ebuild-mode-process-environment): No longer set
	NOCOLOR, because NO_COLOR is supported by stable Portage.

	* ebuild-mode.el (ebuild-mode): Refer to sh-mode directly,
	instead of shell-script-mode which is its alias.
	(sh-must-be-shell-mode): Test for its existence, rather than
	testing emacs-major-version. Simply redefine the function,
	in order to avoid obsolete defadvice and non-portable advice-add.