@@ -1,3 +1,8 @@
+2023-09-20  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode-tag-line-regexp): New variable.
+	(ebuild-repo-mode): Set paragraph-separate when in conf-unix-mode.
+
 2023-09-16  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el (ebuild-mode-time-string): Test if
